Fix spacing on pages other than home

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1417,6 +1417,7 @@ table th, table td {
 
 .leftaligned-grid {
     justify-items: left;
+    align-items: center;
 }
 
 @media only screen and (min-width: 62em) {
